# timebite-platform

./: .gitignore  PRIVACY_LABELS.md  README.md  SUBMISSION_CHECKLIST.md  TESTFLIGHT_BACKEND_CHECKLIST.md  pyproject.toml
analytics/: README.md
apps/: README.md
apps/iOS/: README.md  TimeBiteApp.swift
apps/website/: Untitled  package.json  payload.config.ts  pnpm-lock.yaml
architecture/: README.md  api-contracts.md  component-interfaces.md  data-models.md  integrations.md  system-design.md  time-allocation.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dockerignore  README.md  __init__.py
backend/app/: __init__.py  (+8 more)
docs/: README.md  TimeBite_System_Architecture.mermaid  app-store-launch.md  brand-positioning.md  dashboard-specification.md  feature-checklist.md  focus-os.md  goal-loop-specification.md  implementation-roadmap.md  launch-checklist.md  migration-checklist.md  notion-export.md  phase-2-capture-plan.md  production-data-audit.md  roadmap.md  sprint-plan.md  system-architecture.md  to-do-list.md  ui-architecture.md  ui-screen-architecture.md
product/: README.md  ia.md  prd-daily-intent.md  prd-dashboard.md  prd-energy-aware-scheduling.md  prd-project-states.md  prd-reflection.md  prd-ring-engine.md  prd-time-allocation-engine.md  prd-weekly-caps.md  pricing.md
schemas/: CHANGELOG.md  focus_os_schema.json  goal_schema.json  quarterly_rollup_schema.json  task_schema.json
shared/: README.md
specs/: README.md  backlog.md  master-requirements.md  roadmap-q2.md  sprint-current.md  torus_environment.md  user-stories.md  vision.md
(+195 files in other folders)
