[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "timebite-platform"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.139,<0.140",
  "uvicorn[standard]>=0.35,<0.36",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.14,<3",
  "pymongo>=4.17,<5",
  "httpx>=0.28,<0.29",
  "PyJWT[crypto]>=2.13,<3",
  "cryptography>=46,<47",
]

[project.optional-dependencies]
test = ["pytest>=9,<10", "pytest-asyncio>=1.3,<2"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "ASYNC", "S"]
ignore = ["S101"]
